// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer /> renders correctly for large screens 1`] = `
<div
  className="Drawer"
>
  <div
    className="Drawer__content"
  >
    <Connect(DrawerMenu) />
  </div>
</div>
`;

exports[`<Drawer /> renders correctly for small screens 1`] = `
<div
  className="Drawer"
>
  <div
    className="Drawer__content"
  >
    <Connect(DrawerMenu) />
  </div>
  <ScreenOverlay
    isVisible={true}
    onClick={[Function]}
    zIndex={78}
  />
</div>
`;
